--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -8,7 +8,7 @@ html, body {
   .navbar {
     width: 100%;
     padding: 15px 0;
-    background-color: #ffd300;
+    background-color: white;
     position: fixed;
     top: 0;
     left: 0;
@@ -28,7 +28,7 @@ html, body {
   .navbar-logo .navbar-brand {
     font-size: 1.8rem;
     font-weight: 700;
-    color: #ffffff;
+    color: #ffd300;
     text-decoration: none;
     letter-spacing: 2px;
   }
