--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -56,20 +56,20 @@ html, body {
   }
   
   .navbar-links a:hover {
-    color: #25d366;
+    color: white;
   }
   
   .navbar-login {
     padding: 8px 20px;
     border-radius: 25px;
-    background-color: #feb603;
+    background-color: #ffd300;
     color: #ffffff;
     font-weight: 600;
     transition: background-color 0.3s ease;
   }
   
   .navbar-login:hover {
-    background-color: #128c7e;
+    background-color: #feb603;
   }
   
   /* Responsive Styles */
