changed space between h2 options in login form

--- a/client/src/components/styles/Login.css
+++ b/client/src/components/styles/Login.css
@@ -68,7 +68,7 @@ body {
 /* Header styles for options */
 .options {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   margin-bottom: 1.5rem;
 }
