--- a/client/src/components/styles/NavBar.css
+++ b/client/src/components/styles/NavBar.css
@@ -3,6 +3,28 @@ html, body {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
+
+  .navbar-language select {
+    padding: 8px 12px;
+    border-radius: 25px;
+    border: none;
+    background-color: #ffd300;
+    color: #ffffff;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    outline: none;
+}
+
+.navbar-language select:hover {
+    background-color: #feb603;
+}
+
+.navbar-language select option {
+    background-color: #ffd300;
+    color: #000000;
+}
+
   
   .navbar {
     width: 100%;
