--- a/client/src/components/styles/SignupRefugee.css
+++ b/client/src/components/styles/SignupRefugee.css
@@ -2,6 +2,7 @@
     max-width: 900px;
     margin: 50px auto;
     padding: 40px;
+    margin-top: 250px;
     border-radius: 16px;
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
