--- a/client/src/components/styles/About.css
+++ b/client/src/components/styles/About.css
@@ -8,7 +8,7 @@
     max-width: 900px;
     margin: 0 auto;
     padding: 2rem;
-    background-color: #ffffff;
+    background-color: #EBF0F0;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
